parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACKET
    UEXCLAMATION
    ELLIPSIS
    MODULO
    ENUM
    ARROW
    CARET
    SHORT
    SIZEOF
    EQ_SHIFT_RIGHT
    UNSIGNED
    UNION
    SHIFT_LEFT
    DEFAULT
    EQ_CARET
    DOT
    CASE
    REGISTER
    PIPE
    SWITCH
    TILDE
    RBRACKET
    UMINUS
    VOLATILE
    UASTERISK
    CONST
    EQ_PIPE
    EQ_AMPERSAND
    SIGNED
    EQ_SHIFT_LEFT
    QUESTION
    TYPEDEF
    AUTO
    POUND
    STRUCT
    SHIFT_RIGHT
    EQ_MODULO

Grammar

Rule 1     S' -> start
Rule 2     start -> translation_unit
Rule 3     translation_unit -> external_declaration
Rule 4     translation_unit -> translation_unit external_declaration
Rule 5     external_declaration -> function_definition
Rule 6     external_declaration -> declaration
Rule 7     function_definition -> type_specifier declarator compound_statement
Rule 8     function_definition -> STATIC type_specifier declarator compound_statement
Rule 9     declaration -> type_specifier declarator SEMICOLON
Rule 10    declaration -> EXTERN type_specifier declarator SEMICOLON
Rule 11    declaration_list_opt -> empty
Rule 12    declaration_list_opt -> declaration_list
Rule 13    declaration_list -> declaration
Rule 14    declaration_list -> declaration declaration_list
Rule 15    type_specifier -> INT
Rule 16    type_specifier -> CHAR
Rule 17    type_specifier -> empty
Rule 18    type_specifier -> VOID
Rule 19    type_specifier -> FLOAT
Rule 20    type_specifier -> DOUBLE
Rule 21    type_specifier -> LONG
Rule 22    declarator -> direct_declarator
Rule 23    declarator -> expression ASSIGN expression
Rule 24    declarator -> direct_declarator COMMA declarator
Rule 25    declarator -> expression ASSIGN expression COMMA declarator
Rule 26    declarator -> ASTERISK declarator
Rule 27    direct_declarator -> ID
Rule 28    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 29    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 30    parameter_type_list -> parameter_list
Rule 31    parameter_list -> type_specifier expression
Rule 32    parameter_list -> type_specifier expression COMMA parameter_list
Rule 33    parameter_declaration -> type_specifier declarator
Rule 34    compound_statement -> LBRACE declaration_list_opt statement_list RBRACE
Rule 35    compound_statement -> LBRACE declaration_list_opt RBRACE
Rule 36    statement_list -> statement
Rule 37    statement_list -> statement statement_list
Rule 38    statement -> compound_statement
Rule 39    statement -> jump_statement
Rule 40    statement -> iteration_statement
Rule 41    statement -> selection_statement
Rule 42    statement -> expression_statement
Rule 43    statement -> label
Rule 44    label -> ID COLON
Rule 45    expression_statement -> expression SEMICOLON
Rule 46    expression -> binary_expression
Rule 47    expression -> unary_expression
Rule 48    expression -> primary_expression
Rule 49    expression -> postfix_expression
Rule 50    binary_expression -> expression ASSIGN expression
Rule 51    binary_expression -> expression DOUBLE_PIPE expression
Rule 52    binary_expression -> expression DOUBLE_AMPERSAND expression
Rule 53    binary_expression -> expression EQ expression
Rule 54    binary_expression -> expression NOT_EQ expression
Rule 55    binary_expression -> expression LESS expression
Rule 56    binary_expression -> expression GREATER expression
Rule 57    binary_expression -> expression LESS_EQ expression
Rule 58    binary_expression -> expression GREATER_EQ expression
Rule 59    binary_expression -> expression PLUS expression
Rule 60    binary_expression -> expression MINUS expression
Rule 61    binary_expression -> expression ASTERISK expression
Rule 62    binary_expression -> expression DIV expression
Rule 63    binary_expression -> expression EQ_PLUS expression
Rule 64    binary_expression -> expression EQ_MINUS expression
Rule 65    binary_expression -> expression EQ_TIMES expression
Rule 66    binary_expression -> expression EQ_DIV expression
Rule 67    unary_expression -> PLUS expression
Rule 68    unary_expression -> DOUBLE_PLUS primary_expression
Rule 69    unary_expression -> primary_expression DOUBLE_PLUS
Rule 70    unary_expression -> DOUBLE_MINUS primary_expression
Rule 71    unary_expression -> primary_expression DOUBLE_MINUS
Rule 72    unary_expression -> MINUS expression
Rule 73    unary_expression -> ASTERISK expression
Rule 74    unary_expression -> EXCLAMATION expression
Rule 75    unary_expression -> AMPERSAND expression
Rule 76    postfix_expression -> primary_expression LPAREN argument_expression_list RPAREN
Rule 77    postfix_expression -> primary_expression LPAREN RPAREN
Rule 78    argument_expression_list -> expression
Rule 79    argument_expression_list -> expression COMMA argument_expression_list
Rule 80    primary_expression -> ID
Rule 81    primary_expression -> INUMBER
Rule 82    primary_expression -> FNUMBER
Rule 83    primary_expression -> CHARACTER
Rule 84    primary_expression -> string_literal
Rule 85    primary_expression -> LPAREN expression RPAREN
Rule 86    string_literal -> STRING
Rule 87    jump_statement -> RETURN SEMICOLON
Rule 88    jump_statement -> RETURN expression SEMICOLON
Rule 89    jump_statement -> BREAK SEMICOLON
Rule 90    jump_statement -> CONTINUE SEMICOLON
Rule 91    jump_statement -> GOTO ID SEMICOLON
Rule 92    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 93    iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMICOLON
Rule 94    iteration_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 95    selection_statement -> IF LPAREN expression RPAREN statement
Rule 96    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 97    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 74
ARROW                : 
ASSIGN               : 22 24 49
ASTERISK             : 25 60 72
AUTO                 : 
BREAK                : 88
CARET                : 
CASE                 : 
CHAR                 : 15
CHARACTER            : 82
COLON                : 43
COMMA                : 23 24 31 78
CONST                : 
CONTINUE             : 89
DEFAULT              : 
DIV                  : 61
DO                   : 92
DOT                  : 
DOUBLE               : 19
DOUBLE_AMPERSAND     : 51
DOUBLE_MINUS         : 69 70
DOUBLE_PIPE          : 50
DOUBLE_PLUS          : 67 68
ELLIPSIS             : 
ELSE                 : 95
ENUM                 : 
EQ                   : 52
EQ_AMPERSAND         : 
EQ_CARET             : 
EQ_DIV               : 65
EQ_MINUS             : 63
EQ_MODULO            : 
EQ_PIPE              : 
EQ_PLUS              : 62
EQ_SHIFT_LEFT        : 
EQ_SHIFT_RIGHT       : 
EQ_TIMES             : 64
EXCLAMATION          : 73
EXTERN               : 9
FLOAT                : 18
FNUMBER              : 81
FOR                  : 93
GOTO                 : 90
GREATER              : 55
GREATER_EQ           : 57
ID                   : 26 43 79 90
IF                   : 94 95
INT                  : 14
INUMBER              : 80
LBRACE               : 33 34
LBRACKET             : 
LESS                 : 54
LESS_EQ              : 56
LONG                 : 20
LPAREN               : 27 28 75 76 84 91 92 93 94 95
MINUS                : 59 71
MODULO               : 
NOT_EQ               : 53
PIPE                 : 
PLUS                 : 58 66
POUND                : 
QUESTION             : 
RBRACE               : 33 34
RBRACKET             : 
REGISTER             : 
RETURN               : 86 87
RPAREN               : 27 28 75 76 84 91 92 93 94 95
SEMICOLON            : 8 9 44 86 87 88 89 90 92
SHIFT_LEFT           : 
SHIFT_RIGHT          : 
SHORT                : 
SIGNED               : 
SIZEOF               : 
STATIC               : 7
STRING               : 85
STRUCT               : 
SWITCH               : 
TILDE                : 
TYPEDEF              : 
UASTERISK            : 
UEXCLAMATION         : 
UMINUS               : 
UNION                : 
UNSIGNED             : 
VOID                 : 17
VOLATILE             : 
WHILE                : 91 92
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 75 78
binary_expression    : 45
compound_statement   : 6 7 37
declaration          : 5 12 13
declaration_list     : 11 13
declaration_list_opt : 33 34
declarator           : 6 7 8 9 23 24 25 32
direct_declarator    : 21 23 27 28
empty                : 10 16
expression           : 22 22 24 24 30 31 44 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 71 72 73 74 77 78 84 87 91 92 93 94 95
expression_statement : 41 93 93
external_declaration : 2 3
function_definition  : 4
iteration_statement  : 39
jump_statement       : 38
label                : 42
parameter_declaration : 
parameter_list       : 29 31
parameter_type_list  : 27
postfix_expression   : 48
primary_expression   : 47 67 68 69 70 75 76
selection_statement  : 40
start                : 0
statement            : 35 36 91 92 93 94 95 95
statement_list       : 33 36
string_literal       : 83
translation_unit     : 1 3
type_specifier       : 6 7 8 9 30 31 32
unary_expression     : 46

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . translation_unit
    (2) translation_unit -> . external_declaration
    (3) translation_unit -> . translation_unit external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator compound_statement
    (7) function_definition -> . STATIC type_specifier declarator compound_statement
    (8) declaration -> . type_specifier declarator SEMICOLON
    (9) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (14) type_specifier -> . INT
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . empty
    (17) type_specifier -> . VOID
    (18) type_specifier -> . FLOAT
    (19) type_specifier -> . DOUBLE
    (20) type_specifier -> . LONG
    (96) empty -> .

    STATIC          shift and go to state 11
    EXTERN          shift and go to state 14
    INT             shift and go to state 3
    CHAR            shift and go to state 8
    VOID            shift and go to state 5
    FLOAT           shift and go to state 7
    DOUBLE          shift and go to state 4
    LONG            shift and go to state 6
    ASTERISK        reduce using rule 96 (empty -> .)
    ID              reduce using rule 96 (empty -> .)
    PLUS            reduce using rule 96 (empty -> .)
    DOUBLE_PLUS     reduce using rule 96 (empty -> .)
    DOUBLE_MINUS    reduce using rule 96 (empty -> .)
    MINUS           reduce using rule 96 (empty -> .)
    EXCLAMATION     reduce using rule 96 (empty -> .)
    AMPERSAND       reduce using rule 96 (empty -> .)
    INUMBER         reduce using rule 96 (empty -> .)
    FNUMBER         reduce using rule 96 (empty -> .)
    CHARACTER       reduce using rule 96 (empty -> .)
    LPAREN          reduce using rule 96 (empty -> .)
    STRING          reduce using rule 96 (empty -> .)

    external_declaration           shift and go to state 1
    function_definition            shift and go to state 2
    start                          shift and go to state 9
    type_specifier                 shift and go to state 10
    empty                          shift and go to state 12
    declaration                    shift and go to state 13
    translation_unit               shift and go to state 15

state 1

    (2) translation_unit -> external_declaration .

    STATIC          reduce using rule 2 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 2 (translation_unit -> external_declaration .)
    INT             reduce using rule 2 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> external_declaration .)
    VOID            reduce using rule 2 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 2 (translation_unit -> external_declaration .)
    LONG            reduce using rule 2 (translation_unit -> external_declaration .)
    ASTERISK        reduce using rule 2 (translation_unit -> external_declaration .)
    ID              reduce using rule 2 (translation_unit -> external_declaration .)
    PLUS            reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE_PLUS     reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE_MINUS    reduce using rule 2 (translation_unit -> external_declaration .)
    MINUS           reduce using rule 2 (translation_unit -> external_declaration .)
    EXCLAMATION     reduce using rule 2 (translation_unit -> external_declaration .)
    AMPERSAND       reduce using rule 2 (translation_unit -> external_declaration .)
    INUMBER         reduce using rule 2 (translation_unit -> external_declaration .)
    FNUMBER         reduce using rule 2 (translation_unit -> external_declaration .)
    CHARACTER       reduce using rule 2 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 2 (translation_unit -> external_declaration .)
    STRING          reduce using rule 2 (translation_unit -> external_declaration .)
    $end            reduce using rule 2 (translation_unit -> external_declaration .)


state 2

    (4) external_declaration -> function_definition .

    STATIC          reduce using rule 4 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 4 (external_declaration -> function_definition .)
    INT             reduce using rule 4 (external_declaration -> function_definition .)
    CHAR            reduce using rule 4 (external_declaration -> function_definition .)
    VOID            reduce using rule 4 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 4 (external_declaration -> function_definition .)
    LONG            reduce using rule 4 (external_declaration -> function_definition .)
    ASTERISK        reduce using rule 4 (external_declaration -> function_definition .)
    ID              reduce using rule 4 (external_declaration -> function_definition .)
    PLUS            reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE_PLUS     reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE_MINUS    reduce using rule 4 (external_declaration -> function_definition .)
    MINUS           reduce using rule 4 (external_declaration -> function_definition .)
    EXCLAMATION     reduce using rule 4 (external_declaration -> function_definition .)
    AMPERSAND       reduce using rule 4 (external_declaration -> function_definition .)
    INUMBER         reduce using rule 4 (external_declaration -> function_definition .)
    FNUMBER         reduce using rule 4 (external_declaration -> function_definition .)
    CHARACTER       reduce using rule 4 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 4 (external_declaration -> function_definition .)
    STRING          reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 3

    (14) type_specifier -> INT .

    ASTERISK        reduce using rule 14 (type_specifier -> INT .)
    ID              reduce using rule 14 (type_specifier -> INT .)
    PLUS            reduce using rule 14 (type_specifier -> INT .)
    DOUBLE_PLUS     reduce using rule 14 (type_specifier -> INT .)
    DOUBLE_MINUS    reduce using rule 14 (type_specifier -> INT .)
    MINUS           reduce using rule 14 (type_specifier -> INT .)
    EXCLAMATION     reduce using rule 14 (type_specifier -> INT .)
    AMPERSAND       reduce using rule 14 (type_specifier -> INT .)
    INUMBER         reduce using rule 14 (type_specifier -> INT .)
    FNUMBER         reduce using rule 14 (type_specifier -> INT .)
    CHARACTER       reduce using rule 14 (type_specifier -> INT .)
    LPAREN          reduce using rule 14 (type_specifier -> INT .)
    STRING          reduce using rule 14 (type_specifier -> INT .)


state 4

    (19) type_specifier -> DOUBLE .

    ASTERISK        reduce using rule 19 (type_specifier -> DOUBLE .)
    ID              reduce using rule 19 (type_specifier -> DOUBLE .)
    PLUS            reduce using rule 19 (type_specifier -> DOUBLE .)
    DOUBLE_PLUS     reduce using rule 19 (type_specifier -> DOUBLE .)
    DOUBLE_MINUS    reduce using rule 19 (type_specifier -> DOUBLE .)
    MINUS           reduce using rule 19 (type_specifier -> DOUBLE .)
    EXCLAMATION     reduce using rule 19 (type_specifier -> DOUBLE .)
    AMPERSAND       reduce using rule 19 (type_specifier -> DOUBLE .)
    INUMBER         reduce using rule 19 (type_specifier -> DOUBLE .)
    FNUMBER         reduce using rule 19 (type_specifier -> DOUBLE .)
    CHARACTER       reduce using rule 19 (type_specifier -> DOUBLE .)
    LPAREN          reduce using rule 19 (type_specifier -> DOUBLE .)
    STRING          reduce using rule 19 (type_specifier -> DOUBLE .)


state 5

    (17) type_specifier -> VOID .

    ASTERISK        reduce using rule 17 (type_specifier -> VOID .)
    ID              reduce using rule 17 (type_specifier -> VOID .)
    PLUS            reduce using rule 17 (type_specifier -> VOID .)
    DOUBLE_PLUS     reduce using rule 17 (type_specifier -> VOID .)
    DOUBLE_MINUS    reduce using rule 17 (type_specifier -> VOID .)
    MINUS           reduce using rule 17 (type_specifier -> VOID .)
    EXCLAMATION     reduce using rule 17 (type_specifier -> VOID .)
    AMPERSAND       reduce using rule 17 (type_specifier -> VOID .)
    INUMBER         reduce using rule 17 (type_specifier -> VOID .)
    FNUMBER         reduce using rule 17 (type_specifier -> VOID .)
    CHARACTER       reduce using rule 17 (type_specifier -> VOID .)
    LPAREN          reduce using rule 17 (type_specifier -> VOID .)
    STRING          reduce using rule 17 (type_specifier -> VOID .)


state 6

    (20) type_specifier -> LONG .

    ASTERISK        reduce using rule 20 (type_specifier -> LONG .)
    ID              reduce using rule 20 (type_specifier -> LONG .)
    PLUS            reduce using rule 20 (type_specifier -> LONG .)
    DOUBLE_PLUS     reduce using rule 20 (type_specifier -> LONG .)
    DOUBLE_MINUS    reduce using rule 20 (type_specifier -> LONG .)
    MINUS           reduce using rule 20 (type_specifier -> LONG .)
    EXCLAMATION     reduce using rule 20 (type_specifier -> LONG .)
    AMPERSAND       reduce using rule 20 (type_specifier -> LONG .)
    INUMBER         reduce using rule 20 (type_specifier -> LONG .)
    FNUMBER         reduce using rule 20 (type_specifier -> LONG .)
    CHARACTER       reduce using rule 20 (type_specifier -> LONG .)
    LPAREN          reduce using rule 20 (type_specifier -> LONG .)
    STRING          reduce using rule 20 (type_specifier -> LONG .)


state 7

    (18) type_specifier -> FLOAT .

    ASTERISK        reduce using rule 18 (type_specifier -> FLOAT .)
    ID              reduce using rule 18 (type_specifier -> FLOAT .)
    PLUS            reduce using rule 18 (type_specifier -> FLOAT .)
    DOUBLE_PLUS     reduce using rule 18 (type_specifier -> FLOAT .)
    DOUBLE_MINUS    reduce using rule 18 (type_specifier -> FLOAT .)
    MINUS           reduce using rule 18 (type_specifier -> FLOAT .)
    EXCLAMATION     reduce using rule 18 (type_specifier -> FLOAT .)
    AMPERSAND       reduce using rule 18 (type_specifier -> FLOAT .)
    INUMBER         reduce using rule 18 (type_specifier -> FLOAT .)
    FNUMBER         reduce using rule 18 (type_specifier -> FLOAT .)
    CHARACTER       reduce using rule 18 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 18 (type_specifier -> FLOAT .)
    STRING          reduce using rule 18 (type_specifier -> FLOAT .)


state 8

    (15) type_specifier -> CHAR .

    ASTERISK        reduce using rule 15 (type_specifier -> CHAR .)
    ID              reduce using rule 15 (type_specifier -> CHAR .)
    PLUS            reduce using rule 15 (type_specifier -> CHAR .)
    DOUBLE_PLUS     reduce using rule 15 (type_specifier -> CHAR .)
    DOUBLE_MINUS    reduce using rule 15 (type_specifier -> CHAR .)
    MINUS           reduce using rule 15 (type_specifier -> CHAR .)
    EXCLAMATION     reduce using rule 15 (type_specifier -> CHAR .)
    AMPERSAND       reduce using rule 15 (type_specifier -> CHAR .)
    INUMBER         reduce using rule 15 (type_specifier -> CHAR .)
    FNUMBER         reduce using rule 15 (type_specifier -> CHAR .)
    CHARACTER       reduce using rule 15 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 15 (type_specifier -> CHAR .)
    STRING          reduce using rule 15 (type_specifier -> CHAR .)


state 9

    (0) S' -> start .



state 10

    (6) function_definition -> type_specifier . declarator compound_statement
    (8) declaration -> type_specifier . declarator SEMICOLON
    (21) declarator -> . direct_declarator
    (22) declarator -> . expression ASSIGN expression
    (23) declarator -> . direct_declarator COMMA declarator
    (24) declarator -> . expression ASSIGN expression COMMA declarator
    (25) declarator -> . ASTERISK declarator
    (26) direct_declarator -> . ID
    (27) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (28) direct_declarator -> . direct_declarator LPAREN RPAREN
    (45) expression -> . binary_expression
    (46) expression -> . unary_expression
    (47) expression -> . primary_expression
    (48) expression -> . postfix_expression
    (49) binary_expression -> . expression ASSIGN expression
    (50) binary_expression -> . expression DOUBLE_PIPE expression
    (51) binary_expression -> . expression DOUBLE_AMPERSAND expression
    (52) binary_expression -> . expression EQ expression
    (53) binary_expression -> . expression NOT_EQ expression
    (54) binary_expression -> . expression LESS expression
    (55) binary_expression -> . expression GREATER expression
    (56) binary_expression -> . expression LESS_EQ expression
    (57) binary_expression -> . expression GREATER_EQ expression
    (58) binary_expression -> . expression PLUS expression
    (59) binary_expression -> . expression MINUS expression
    (60) binary_expression -> . expression ASTERISK expression
    (61) binary_expression -> . expression DIV expression
    (62) binary_expression -> . expression EQ_PLUS expression
    (63) binary_expression -> . expression EQ_MINUS expression
    (64) binary_expression -> . expression EQ_TIMES expression
    (65) binary_expression -> . expression EQ_DIV expression
    (66) unary_expression -> . PLUS expression
    (67) unary_expression -> . DOUBLE_PLUS primary_expression
    (68) unary_expression -> . primary_expression DOUBLE_PLUS
    (69) unary_expression -> . DOUBLE_MINUS primary_expression
    (70) unary_expression -> . primary_expression DOUBLE_MINUS
    (71) unary_expression -> . MINUS expression
    (72) unary_expression -> . ASTERISK expression
    (73) unary_expression -> . EXCLAMATION expression
    (74) unary_expression -> . AMPERSAND expression
    (79) primary_expression -> . ID
    (80) primary_expression -> . INUMBER
    (81) primary_expression -> . FNUMBER
    (82) primary_expression -> . CHARACTER
    (83) primary_expression -> . string_literal
    (84) primary_expression -> . LPAREN expression RPAREN
    (75) postfix_expression -> . primary_expression LPAREN argument_expression_list RPAREN
    (76) postfix_expression -> . primary_expression LPAREN RPAREN
    (85) string_literal -> . STRING

    ASTERISK        shift and go to state 26
    ID              shift and go to state 30
    PLUS            shift and go to state 24
    DOUBLE_PLUS     shift and go to state 36
    DOUBLE_MINUS    shift and go to state 22
    MINUS           shift and go to state 20
    EXCLAMATION     shift and go to state 16
    AMPERSAND       shift and go to state 27
    INUMBER         shift and go to state 33
    FNUMBER         shift and go to state 31
    CHARACTER       shift and go to state 18
    LPAREN          shift and go to state 29
    STRING          shift and go to state 19

    binary_expression              shift and go to state 32
    unary_expression               shift and go to state 17
    direct_declarator              shift and go to state 25
    postfix_expression             shift and go to state 23
    primary_expression             shift and go to state 28
    declarator                     shift and go to state 34
    expression                     shift and go to state 35
    string_literal                 shift and go to state 21

state 11

    (7) function_definition -> STATIC . type_specifier declarator compound_statement
    (14) type_specifier -> . INT
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . empty
    (17) type_specifier -> . VOID
    (18) type_specifier -> . FLOAT
    (19) type_specifier -> . DOUBLE
    (20) type_specifier -> . LONG
    (96) empty -> .

    INT             shift and go to state 3
    CHAR            shift and go to state 8
    VOID            shift and go to state 5
    FLOAT           shift and go to state 7
    DOUBLE          shift and go to state 4
    LONG            shift and go to state 6
    ASTERISK        reduce using rule 96 (empty -> .)
    ID              reduce using rule 96 (empty -> .)
    PLUS            reduce using rule 96 (empty -> .)
    DOUBLE_PLUS     reduce using rule 96 (empty -> .)
    DOUBLE_MINUS    reduce using rule 96 (empty -> .)
    MINUS           reduce using rule 96 (empty -> .)
    EXCLAMATION     reduce using rule 96 (empty -> .)
    AMPERSAND       reduce using rule 96 (empty -> .)
    INUMBER         reduce using rule 96 (empty -> .)
    FNUMBER         reduce using rule 96 (empty -> .)
    CHARACTER       reduce using rule 96 (empty -> .)
    LPAREN          reduce using rule 96 (empty -> .)
    STRING          reduce using rule 96 (empty -> .)

    type_specifier                 shift and go to state 37
    empty                          shift and go to state 12

state 12

    (16) type_specifier -> empty .

    ASTERISK        reduce using rule 16 (type_specifier -> empty .)
    ID              reduce using rule 16 (type_specifier -> empty .)
    PLUS            reduce using rule 16 (type_specifier -> empty .)
    DOUBLE_PLUS     reduce using rule 16 (type_specifier -> empty .)
    DOUBLE_MINUS    reduce using rule 16 (type_specifier -> empty .)
    MINUS           reduce using rule 16 (type_specifier -> empty .)
    EXCLAMATION     reduce using rule 16 (type_specifier -> empty .)
    AMPERSAND       reduce using rule 16 (type_specifier -> empty .)
    INUMBER         reduce using rule 16 (type_specifier -> empty .)
    FNUMBER         reduce using rule 16 (type_specifier -> empty .)
    CHARACTER       reduce using rule 16 (type_specifier -> empty .)
    LPAREN          reduce using rule 16 (type_specifier -> empty .)
    STRING          reduce using rule 16 (type_specifier -> empty .)


state 13

    (5) external_declaration -> declaration .

    STATIC          reduce using rule 5 (external_declaration -> declaration .)
    EXTERN          reduce using rule 5 (external_declaration -> declaration .)
    INT             reduce using rule 5 (external_declaration -> declaration .)
    CHAR            reduce using rule 5 (external_declaration -> declaration .)
    VOID            reduce using rule 5 (external_declaration -> declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 5 (external_declaration -> declaration .)
    LONG            reduce using rule 5 (external_declaration -> declaration .)
    ASTERISK        reduce using rule 5 (external_declaration -> declaration .)
    ID              reduce using rule 5 (external_declaration -> declaration .)
    PLUS            reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE_PLUS     reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE_MINUS    reduce using rule 5 (external_declaration -> declaration .)
    MINUS           reduce using rule 5 (external_declaration -> declaration .)
    EXCLAMATION     reduce using rule 5 (external_declaration -> declaration .)
    AMPERSAND       reduce using rule 5 (external_declaration -> declaration .)
    INUMBER         reduce using rule 5 (external_declaration -> declaration .)
    FNUMBER         reduce using rule 5 (external_declaration -> declaration .)
    CHARACTER       reduce using rule 5 (external_declaration -> declaration .)
    LPAREN          reduce using rule 5 (external_declaration -> declaration .)
    STRING          reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 14

    (9) declaration -> EXTERN . type_specifier declarator SEMICOLON
    (14) type_specifier -> . INT
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . empty
    (17) type_specifier -> . VOID
    (18) type_specifier -> . FLOAT
    (19) type_specifier -> . DOUBLE
    (20) type_specifier -> . LONG
    (96) empty -> .

    INT             shift and go to state 3
    CHAR            shift and go to state 8
    VOID            shift and go to state 5
    FLOAT           shift and go to state 7
    DOUBLE          shift and go to state 4
    LONG            shift and go to state 6
    ASTERISK        reduce using rule 96 (empty -> .)
    ID              reduce using rule 96 (empty -> .)
    PLUS            reduce using rule 96 (empty -> .)
    DOUBLE_PLUS     reduce using rule 96 (empty -> .)
    DOUBLE_MINUS    reduce using rule 96 (empty -> .)
    MINUS           reduce using rule 96 (empty -> .)
    EXCLAMATION     reduce using rule 96 (empty -> .)
    AMPERSAND       reduce using rule 96 (empty -> .)
    INUMBER         reduce using rule 96 (empty -> .)
    FNUMBER         reduce using rule 96 (empty -> .)
    CHARACTER       reduce using rule 96 (empty -> .)
    LPAREN          reduce using rule 96 (empty -> .)
    STRING          reduce using rule 96 (empty -> .)

    type_specifier                 shift and go to state 38
    empty                          shift and go to state 12

state 15

    (1) start -> translation_unit .
    (3) translation_unit -> translation_unit . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator compound_statement
    (7) function_definition -> . STATIC type_specifier declarator compound_statement
    (8) declaration -> . type_specifier declarator SEMICOLON
    (9) declaration -> . EXTERN type_specifier declarator SEMICOLON
    (14) type_specifier -> . INT
    (15) type_specifier -> . CHAR
    (16) type_specifier -> . empty
    (17) type_specifier -> . VOID
    (18) type_specifier -> . FLOAT
    (19) type_specifier -> . DOUBLE
    (20) type_specifier -> . LONG
    (96) empty -> .

    $end            reduce using rule 1 (start -> translation_unit .)
    STATIC          shift and go to state 11
    EXTERN          shift and go to state 14
    INT             shift and go to state 3
    CHAR            shift and go to state 8
    VOID            shift and go to state 5
    FLOAT           shift and go to state 7
    DOUBLE          shift and go to state 4
    LONG            shift and go to state 6
    ASTERISK        reduce using rule 96 (empty -> .)
    ID              reduce using rule 96 (empty -> .)
    PLUS            reduce using rule 96 (empty -> .)
    DOUBLE_PLUS     reduce using rule 96 (empty -> .)
    DOUBLE_MINUS    reduce using rule 96 (empty -> .)
    MINUS           reduce using rule 96 (empty -> .)
    EXCLAMATION     reduce using rule 96 (empty -> .)
    AMPERSAND       reduce using rule 96 (empty -> .)
    INUMBER         reduce using rule 96 (empty -> .)
    FNUMBER         reduce using rule 96 (empty -> .)
    CHARACTER       reduce using rule 96 (empty -> .)
    LPAREN          reduce using rule 96 (empty -> .)
    STRING          reduce using rule 96 (empty -> .)

    external_declaration           shift and go to state 39
    function_definition            shift and go to state 2
    declaration                    shift and go to state 13
    type_specifier                 shift and go to state 10
    empty                          shift and go to state 12

state 16

    (73) unary_expression -> EXCLAMATION . expression
    (45) expression -> . binary_expression
    (46) expression -> . unary_expression
    (47) expression -> . primary_expression
    (48) expression -> . postfix_expression
    (49) binary_expression -> . expression ASSIGN expression
    (50) binary_expression -> . expression DOUBLE_PIPE expression
    (51) binary_expression -> . expression DOUBLE_AMPERSAND expression
    (52) binary_expression -> . expression EQ expression
    (53) binary_expression -> . expression NOT_EQ expression
    (54) binary_expression -> . expression LESS expression
    (55) binary_expression -> . expression GREATER expression
    (56) binary_expression -> . expression LESS_EQ expression
    (57) binary_expression -> . expression GREATER_EQ expression
    (58) binary_expression -> . expression PLUS expression
    (59) binary_expression -> . expression MINUS expression
    (60) binary_expression -> . expression ASTERISK expression
    (61) binary_expression -> . expression DIV expression
    (62) binary_expression -> . expression EQ_PLUS expression
    (63) binary_expression -> . expression EQ_MINUS expression
    (64) binary_expression -> . expression EQ_TIMES expression
    (65) binary_expression -> . expression EQ_DIV expression
    (66) unary_expression -> . PLUS expression
    (67) unary_expression -> . DOUBLE_PLUS primary_expression
    (68) unary_expression -> . primary_expression DOUBLE_PLUS
    (69) unary_expression -> . DOUBLE_MINUS primary_expression
    (70) unary_expression -> . primary_expression DOUBLE_MINUS
    (71) unary_expression -> . MINUS expression
    (72) unary_expression -> . ASTERISK expression
    (73) unary_expression -> . EXCLAMATION expression
    (74) unary_expression -> . AMPERSAND expression
    (79) primary_expression -> . ID
    (80) primary_expression -> . INUMBER
    (81) primary_expression -> . FNUMBER
    (82) primary_expression -> . CHARACTER
    (83) primary_expression -> . string_literal
    (84) primary_expression -> . LPAREN expression RPAREN
    (75) postfix_expression -> . primary_expression LPAREN argument_expression_list RPAREN
    (76) postfix_expression -> . primary_expression LPAREN RPAREN
    (85) string_literal -> . STRING

    PLUS            shift and go to state 24
    DOUBLE_PLUS     shift and go to state 36
    DOUBLE_MINUS    shift and go to state 22
    MINUS           shift and go to state 20
    ASTERISK        shift and go to state 40
    EXCLAMATION     shift and go to state 16
    AMPERSAND       shift and go to state 27
    ID              shift and go to state 41
    INUMBER         shift and go to state 33
    FNUMBER         shift and go to state 31
    CHARACTER       shift and go to state 18
    LPAREN          shift and go to state 29
    STRING          shift and go to state 19
